--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: 'Helvetica Neue', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.product-gallery {
+  display: grid; 
+  grid-template-columns: repeat(3, 1fr); 
+  gap: 10px;
+  justify-items: center;
 }
+
+.goods-card {
+  padding: 10px;
+  text-align: center;
+}
+
+.goods-card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+}
+
+.goods-card h3 {
+  font-size: 1.2em;
+  margin: 10px 0;
+}
+
+.goods-card p {
+  font-style: italic;
+  font-size: 1em;
+  color: #848484;
+}
+
